--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: "" # optional
 url: "https://foo_bar.github.io"
 #twitter_username: foo_bar
 #github_username: foo_bar
-github_repo: foo_bar/foo_bar.github.io
+github_repo: jeffbrown/jeffbrown.github.io
 #google_analytics: UA-80085-YOUR-ID
 # disqus: disqus-id
 
